Move to Docker Compose build strategy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,11 @@ version: "3.7"
 
 services:
   jfinance-server:
-    build: .
+    build: 
+      context: .
+      dockerfile: jf-server-dockerfile
     ports:
       - 8080:8080
     container_name: jfinance-container
+    
 # If you use an image, the dockerfile is ignored (cause dockerfiles build images)
