--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 bootJar {
-    baseName = 'gs-rest-service'
-    version =  '0.1.0'
+    baseName = 'jfinance-rest-service'
+    version =  '0.0.0' // Set version here
 }
 
 repositories {
@@ -23,7 +23,27 @@ repositories {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java']
+        }
+    }
+    test {
+        java {
+            srcDirs = ['src/test/java']
+        }
+    }
+}
+
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+
+    testCompile("junit:junit:4.12")
+    testCompile("org.mockito:mockito-core:2.7.22")
     testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+test {
+    useJUnit()
 }
